# Galerie-arta-OOP

./: Angajat.cpp  Angajat.h  CMakeLists.txt  Exponat.cpp  Exponat.h  ExponatCombinat.cpp  ExponatCombinat.h  ExponatFotografie.cpp  ExponatFotografie.h  ExponatPictura.cpp  ExponatPictura.h  ExponatSculptura.cpp  ExponatSculptura.h  Persoana.cpp  Persoana.h  README.md  Sponsor.cpp  Sponsor.h  Surse  Utilizator.cpp  Utilizator.h  main.cpp
