cmake_minimum_required(VERSION 3.23)
project(Galerie_Arta_OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Galerie_Arta_OOP main.cpp Persoana.cpp Persoana.h Angajat.cpp Angajat.h Sponsor.cpp Sponsor.h Exponat.cpp Exponat.h ExponatPictura.cpp ExponatPictura.h ExponatFotografie.cpp ExponatFotografie.h ExponatSculptura.cpp ExponatSculptura.h ExponatCombinat.cpp ExponatCombinat.h Utilizator.cpp Utilizator.h)
